--- a/DACK/DACK/Views/Shared/_Layout.cshtml
+++ b/DACK/DACK/Views/Shared/_Layout.cshtml
@@ -452,7 +452,7 @@
                             <li class="active"><a href="./index.html">Trang chủ</a></li>
 
                             <li>
-                                <a href="#">Áo <span class="arrow_carrot-down"></span></a>
+                                <a href="#">Phụ Kiện <span class="arrow_carrot-down"></span></a>
                                 <ul class="dropdown" style="width: 600px; padding: 20px;">
                                     <div class="row">
                                         <div class="col-lg-4">
