--- a/FashionStore/FashionStore/Areas/Admin/Views/Product/Create.cshtml
+++ b/FashionStore/FashionStore/Areas/Admin/Views/Product/Create.cshtml
@@ -48,10 +48,10 @@
 
                     <div class="col-md-4">
                         <div class="mb-3">
-                            <label class="form-label">Chọn Danh mục</label>
-                            @* Dropdown chọn nhiều danh mục *@
-                            @Html.ListBoxFor(m => m.CategoryId, (MultiSelectList)ViewBag.Categories, new { @class = "form-select", style = "height: 150px;" })
-                            <small class="text-muted">Giữ phím Ctrl để chọn nhiều</small>
+                            <label class="form-label">Danh mục</label>
+                            @* Đổi ép kiểu thành SelectList và dùng DropDownListFor thay vì MultiSelectList *@
+                            @Html.DropDownListFor(m => m.CategoryId, (SelectList)ViewBag.Categories, "-- Chọn danh mục --", new { @class = "form-select" })
+                            @Html.ValidationMessageFor(m => m.CategoryId, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="mb-3">
