--- a/DACK/DACK/Views/Shared/_Layout.cshtml
+++ b/DACK/DACK/Views/Shared/_Layout.cshtml
@@ -516,7 +516,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#">Áo <span class="arrow_carrot-down"></span></a>
+                                <a href="#">Phụ kiện <span class="arrow_carrot-down"></span></a>
                                 <ul class="dropdown" style="width: 600px; padding: 20px;">
                                     <div class="row">
                                         <div class="col-lg-4">
